retrieve_ENO_DEV1/objects/Costume_Item__c.object
<CustomObject>
    <fields>
        <fullName>Costume__c</fullName>
        <label>Costume</label>
        <referenceTo>Costume__c</referenceTo>
        <relationshipLabel>Costume Items</relationshipLabel>
        <relationshipName>Costume_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_is_only_a_Prop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Item is only a Prop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_reference_Number__c</fullName>
        <label>Item reference Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IMAGE(&quot;https://chart.googleapis.com/chart?cht=qr&amp;chs=200x200&amp;chl=&quot; +
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id ,
Name,
200,
200
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_of_this_item__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity of this item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_of_Costume_Item__c</fullName>
        <label>Status of Costume Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Dead (sent to General Stock)</fullName>
                </value>
                <value>
                    <fullName>Dead (Discarded)</fullName>
                </value>
                <value>
                    <fullName>Repurposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Description_Other__c</fullName>
        <label>Trade Description of Goods Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Description__c</fullName>
        <description>For Carnet</description>
        <label>Trade Description of Goods</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apron</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Belt</fullName>
                </value>
                <value>
                    <fullName>Bodice</fullName>
                </value>
                <value>
                    <fullName>Bra</fullName>
                </value>
                <value>
                    <fullName>Bracelet</fullName>
                </value>
                <value>
                    <fullName>Braces</fullName>
                </value>
                <value>
                    <fullName>Breeches</fullName>
                </value>
                <value>
                    <fullName>Cape</fullName>
                </value>
                <value>
                    <fullName>Cassock</fullName>
                </value>
                <value>
                    <fullName>Coat</fullName>
                </value>
                <value>
                    <fullName>Corset</fullName>
                </value>
                <value>
                    <fullName>Crinoline</fullName>
                </value>
                <value>
                    <fullName>Doublet</fullName>
                </value>
                <value>
                    <fullName>Dress</fullName>
                </value>
                <value>
                    <fullName>Dungarees</fullName>
                </value>
                <value>
                    <fullName>Earrings</fullName>
                </value>
                <value>
                    <fullName>Fabrics</fullName>
                </value>
                <value>
                    <fullName>Glasses</fullName>
                </value>
                <value>
                    <fullName>Handkerchief</fullName>
                </value>
                <value>
                    <fullName>Hat</fullName>
                </value>
                <value>
                    <fullName>Hosiery</fullName>
                </value>
                <value>
                    <fullName>Jacket</fullName>
                </value>
                <value>
                    <fullName>Jumper/Sweater</fullName>
                </value>
                <value>
                    <fullName>Jumpsuit</fullName>
                </value>
                <value>
                    <fullName>Leggings</fullName>
                </value>
                <value>
                    <fullName>Necklace</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Petticoat</fullName>
                </value>
                <value>
                    <fullName>Playsuit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Single_Unit__c</fullName>
        <label>Value of Single Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Which_Crate_Item_is_Located__c</fullName>
        <label>Which Crate Item is Located?</label>
        <type>TextArea</type>
    </fields>
    <label>Costume Item</label>
    <nameField>
        <label>Costume Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costume Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>